--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
 ###
  # @Author: error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
  # @Date: 2023-01-04 10:33:41
- # @LastEditors: error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
- # @LastEditTime: 2023-03-21 14:46:21
+ # @LastEditors: Arpat0711 624677957@qq.com
+ # @LastEditTime: 2023-03-22 18:40:28
  # @FilePath: \ruoyi-ui\.env.production
  # @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 ###
